--- a/vignettes/longevityTools.Rmd
+++ b/vignettes/longevityTools.Rmd
@@ -45,7 +45,7 @@ suppressPackageStartupMessages({
 })
 ```
 
-Note: the most recent version of this tutorial can be found <a href="https://htmlpreview.github.io/?https://github.com/tgirke/systemPipeR/blob/master/vignettes/systemPipeR.html">here</a> and a short overview slide show [here](https://htmlpreview.github.io/?https://github.com/tgirke/systemPipeR/master/inst/extdata/slides/systemPipeRslides.html).
+Note: the most recent version of this tutorial can be found <a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools.html">here</a>.
 
 # Introduction
 text text text text text text text text text text text text
@@ -78,16 +78,27 @@ vignette("longevityTools") # Opens vignette
 ```
 <div align="right">[Back to Table of Contents]()</div>
 
+## Sample data from GTEx
+The eQTL data used in this vignette can be downloaded from the [GTEx site](http://www.gtexportal.org/home/datasets).
+Note, the following downloads a 1.3GB file, which will take some time.
+
+```{r eQTL_download, eval=FALSE}
+download.file("http://www.gtexportal.org/static/datasets/gtex_analysis_v6/single_tissue_eqtl_data/GTEx_Analysis_V6_eQTLs.tar.gz", "./GTEx_Analysis_V6_eQTLs.tar.gz")
+untar("GTEx_Analysis_V6_eQTLs.tar.gz")
+```
+
 ## Utilities
 The _`geneGrep`_ function takes GTEx results and gene list as arguments,
 returns GTEx eSNP results for genes in gene list. Genes without significant
-eSNPs are removed from results. Input data: GTEx_Analysis_V6_eQTLs.tar.gz 
-
-```{r genRna_workflow, eval=FALSE}
+eSNPs are removed from results. The following sample file _Whole\_Blood\_Analysis.snpgenes_ 
+has been subsetted to the first 100 rows.
+```{r geneGrep, eval=TRUE}
 library(longevityTools)
-dat <- read.table("~/Documents/longevity/GTEx/data/Whole_Blood_Analysis.snpgenes.head100", header=TRUE, sep="\t", stringsAsFactors=FALSE)
-myGenes<- c("RP11-693J15.4", "RP11-809N8.4", "junkNoMatch")
+samplepath <- system.file("extdata", "Whole_Blood_Analysis.snpgenes.head100", package="longevityTools") 
+dat <- read.delim(samplepath)
+myGenes <- c("RP11-693J15.4", "RP11-809N8.4", "junkNoMatch")
 result <- geneGrep(dat, myGenes)
+result
 ```
 
 <div align="right">[Back to Table of Contents]()</div>
