--- a/vignettes/longevityTools_CMAP.Rmd
+++ b/vignettes/longevityTools_CMAP.Rmd
@@ -77,9 +77,9 @@ vignette("longevityTools_CMAP", package="longevityTools") # Opens vignette
 ```
 <div align="right">[Back to Table of Contents]()</div>
 
-## Sample data from GTEx
-The eQTL data used in this vignette can be downloaded from the [GTEx site](http://www.gtexportal.org/home/datasets).
-Note, the following downloads a 1.3GB file, which will take some time.
+## Import custom functions 
+Preliminary functions that are still in the developement stage or not fully documented can be 
+imported with the `source` command from the `inst/extdata` directory of the package.
 
 ```{r source_fct, eval=TRUE}
 fctpath <- system.file("extdata", "analysis_Fct.R", package="longevityTools")
