--- a/vignettes/longevityTools_CMAP.Rmd
+++ b/vignettes/longevityTools_CMAP.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "_longevityTools_: Connecting Age-related Gene Expression Signatures with Small Molecules" 
+title: "_longevityTools_: Connecting Drug and Age related Gene Expression Signatures" 
 author: "Authors: Thomas Girke, Danjuma Quarless, Kuan-Fu Ding, Jamison McCorrison, Tyler Backman, Nik Schork, Dan Evans"
 date: "Last update: `r format(Sys.time(), '%d %B, %Y')`" 
 output:
