--- a/vignettes/longevityTools_CMAP.Rmd
+++ b/vignettes/longevityTools_CMAP.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "_longevityTools_: Connecting Drug and Age related Gene Expression Signatures" 
+title: "_longevityTools_: Connecting Drug- and Age-related Gene Expression Signatures" 
 author: "Authors: Tyler Backman, Dan Evans, Thomas Girke"
 date: "Last update: `r format(Sys.time(), '%d %B, %Y')`" 
 output:
