--- a/vignettes/longevityTools.Rmd
+++ b/vignettes/longevityTools.Rmd
@@ -47,12 +47,12 @@ suppressPackageStartupMessages({
 Note: the GitHub repository of this package is <a href="https://github.com/tgirke/longevityTools">here</a> and the most recent version of this tutorial can be found <a href="https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools.html">here</a>.
 
 # Introduction 
-This vignette provides general information about the `longevityTools` package. The analysis tools
-provided by this package are part of the NIH/NIH funded [Longevity Genomics](http://www.longevitygenomics.org/) project.
-The analysis workflows used by the project are documented in separate vignette of this package. Currently, this includes
-following vignettes:
-[longevityTools_eQTL](https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools_eQTL.html) and
-[longevityTools_CMAP](https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools_CMAP.html) [@Li2013-oy; @Li2009-oc].
+This vignette provides general information about the `longevityTools` package.
+Its development is part of the [Longevity Genomics](http://www.longevitygenomics.org/) project. 
+The analysis workflows used by this project are documented in companion vignettes. Currently, 
+this includes the [longevityTools_eQTL](https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools_eQTL.html) and
+[longevityTools_CMAP](https://htmlpreview.github.io/?https://github.com/tgirke/longevityTools/blob/master/vignettes/longevityTools_CMAP.html) 
+vignettes [@Li2013-oy; @Li2009-oc].
 
 <div align="right">[Back to Table of Contents]()</div>
 
@@ -76,39 +76,26 @@ library("longevityTools") # Loads the package
 library(help="longevityTools") # Lists package info
 vignette("longevityTools") # Opens vignette
 ```
-<div align="right">[Back to Table of Contents]()</div>
 
-## Sample data from GTEx
-The eQTL data used in this vignette can be downloaded from the [GTEx site](http://www.gtexportal.org/home/datasets).
-Note, the following downloads a 1.3GB file, which will take some time.
-
-```{r eQTL_download, eval=FALSE}
-download.file("http://www.gtexportal.org/static/datasets/gtex_analysis_v6/single_tissue_eqtl_data/GTEx_Analysis_V6_eQTLs.tar.gz", "./GTEx_Analysis_V6_eQTLs.tar.gz")
-untar("GTEx_Analysis_V6_eQTLs.tar.gz")
-```
-
-## Utilities
-The _`geneGrep`_ function takes GTEx results and gene list as arguments,
-returns GTEx eSNP results for genes in gene list. Genes without significant
-eSNPs are removed from results. The following sample file _Whole\_Blood\_Analysis.snpgenes_ 
-has been subsetted to the first 100 rows.
-```{r geneGrep, eval=TRUE}
-library(longevityTools)
-samplepath <- system.file("extdata", "Whole_Blood_Analysis.snpgenes.head100", package="longevityTools") 
-dat <- read.delim(samplepath)
-myGenes <- c("RP11-693J15.4", "RP11-809N8.4", "junkNoMatch")
-result <- geneGrep(dat, myGenes)
-result
-```
+## Overview of object clases, methods and functions
+To be added later...
 
 <div align="right">[Back to Table of Contents]()</div>
-
 
 # Version information
 
 ```{r sessionInfo}
 sessionInfo()
 ```
+<div align="right">[Back to Table of Contents]()</div>
+
+# Funding
+This project is funded by NIH grant U24AG051129 awarded by the National Intitute of Aging (NIA).
+
+<div align="right">[Back to Table of Contents]()</div>
+
+# Version information
+
 <div align="right">[Back to Table of Contents]()</div>
 
 # References
