--- a/vignettes/longevityTools_CMAP.Rmd
+++ b/vignettes/longevityTools_CMAP.Rmd
@@ -51,7 +51,7 @@ text text text text text text text text text text text text
 text text text text text text text text text text text text
 text text text text text text text text text text text text
 text text text text text text text text text text text text
-some citation [@Li2013-oy; @Li2009-oc]
+some citation [@Lamb2006-uv; @Peters2015-fc; @Sood2015-pb]
 
 <div align="right">[Back to Table of Contents]()</div>
 
