--- a/vignettes/longevityTools_eQTL.Rmd
+++ b/vignettes/longevityTools_eQTL.Rmd
@@ -102,6 +102,11 @@ result
 
 <div align="right">[Back to Table of Contents]()</div>
 
+# Funding
+This project is funded by NIH grant U24AG051129 awarded by the National Intitute of Aging (NIA).
+
+<div align="right">[Back to Table of Contents]()</div>
+
 
 # Version information
 
