--- a/vignettes/longevityTools_CMAP.Rmd
+++ b/vignettes/longevityTools_CMAP.Rmd
@@ -50,8 +50,8 @@ Note: the GitHub repository of this package is <a href="https://github.com/tgirk
 This study analyzes drug- and age-related genome-wide expression data from public microarray 
 and RNA-Seq experiments. One of the main objective is the identification drug candidates 
 modulating the expression of longevity genes and pathways. For this, we compare age-related expression signatures with those from 
-drug treamtments. The age-related query signatures are from recent studies such as Peters 
-et al. [-@Peters2015-fc] and Sood et al. [-@Sood2015-pb], while the drug-related reference 
+drug treamtments. The age-related query signatures are from recent publications such as 
+Peters et al. [-@Peters2015-fc] and Sood et al. [-@Sood2015-pb], while the drug-related reference 
 signatures are from the Connectivity Map (CMAP) and LINCS projects [@Lamb2006-uv].
 
 <div align="right">[Back to Table of Contents]()</div>
