--- a/vignettes/longevityTools_CMAP.Rmd
+++ b/vignettes/longevityTools_CMAP.Rmd
@@ -105,6 +105,19 @@ getCmap(rerun=FALSE) # Downloads cmap rank matrix and compound annotation files
 getCmapCEL(rerun=FALSE) # Download cmap CEL files. Note, this will take some time
 ```
 
+## Determine chip type from CEL files. 
+The CMAP data set utilizes three different Affymetrix chip (HG-U133A,
+HT_HG-U133A and U133AAofAv2). The following obtains the chip type information
+from the CEL files and stores the result in an `rds` file with the path 
+`./data/chiptype.rds`. Users who skipped the download of the CEL files can
+download this file [here](http://biocluster.ucr.edu/~tgirke/projects/longevity/cmap/data/chiptype.rds).
+
+```{r get_cel_type, eval=TRUE}
+celfiles <- list.files("./data/CEL", pattern=".CEL$")
+chiptype <- sapply(celfiles, function(x) affxparser::readCelHeader(paste0("data/CEL/", x))$chiptype)
+saveRDS(chiptype, "./data/chiptype.rds")
+```
+
 <div align="right">[Back to Table of Contents]()</div>
 
 # Funding
