--- a/vignettes/longevityTools.Rmd
+++ b/vignettes/longevityTools.Rmd
@@ -77,13 +77,13 @@ library(help="longevityTools") # Lists package info
 vignette("longevityTools") # Opens vignette
 ```
 
-## Overview of object clases, methods and functions
+# Overview of object clases, methods and functions
 
 To be continued...
 
 <div align="right">[Back to Table of Contents]()</div>
 
-## Workflow vignettes
+# Workflow vignettes
 
 Currently, this package includes the following analysis workflow vignettes:
 
