--- a/vignettes/longevityTools_CMAP.Rmd
+++ b/vignettes/longevityTools_CMAP.Rmd
@@ -169,13 +169,6 @@ cmap <- read.delim("./data/cmap_instances_02.txt", check.names=FALSE) # Note: cm
 comp_list <- sampleList(cmap, myby="CMP_CELL")
 ```
 
-## DEG analysis with Limma
-
-```{r deg_limma, eval=FALSE}
-degMA <- runLimma(df, comp_list, fdr=0.10, foldchange=1, verbose=TRUE)
-write.table(degMA, file="./results/degMA.xls", quote=FALSE, sep="\t", col.names = NA) 
-```
-
 <div align="right">[Back to Table of Contents]()</div>
 
 ## Load normalized expression data 
@@ -191,6 +184,16 @@ df3 <- readRDS(paste0("data/", chiptype_dir[3], "/", "all_mas5exprs.rds"))
 affyid <- rownames(df1)[rownames(df1) %in% rownames(df2)]; affyid <- affyid[affyid %in% rownames(df3)]
 df <- cbind(df1[affyid,], df2[affyid,], df3[affyid,])
 ```
+
+## DEG analysis with Limma
+
+```{r deg_limma, eval=FALSE}
+degMA <- runLimma(df, comp_list, fdr=0.10, foldchange=1, verbose=TRUE)
+write.table(degMA, file="./results/degMA.xls", quote=FALSE, sep="\t", col.names = NA) 
+```
+
+<div align="right">[Back to Table of Contents]()</div>
+
 
 
 # Funding
