--- a/vignettes/longevityTools_CMAP.Rmd
+++ b/vignettes/longevityTools_CMAP.Rmd
@@ -174,7 +174,7 @@ comp_list <- sampleList(cmap, myby="CMP_CELL")
 ## Load normalized expression data 
 
 The following loads the MAS5 normalized expression data into a single `data.frame`. 
-To spead up the import, `rds` files are used. 
+To spead up the import, the data is read from `rds` files. 
 
 ```{r load_mas5_data, eval=FALSE}
 chiptype_dir <- unique(readRDS("./data/chiptype.rds"))
@@ -194,7 +194,36 @@ write.table(degMA, file="./results/degMA.xls", quote=FALSE, sep="\t", col.names 
 
 <div align="right">[Back to Table of Contents]()</div>
 
+## Annotation information for Affy chips
+The following generate annotation information for the Affymetirx probe set identifiers.
 
+Note, the three different Affymetrix chip types used by CMAP share most probe set ids (>95%), 
+meaning it is possible to combine the data after normalization. The number of CEL files from 
+each chip type are: 807 CEL files from HG-U133A, 6029 CEL files from HT_HG-U133A, and 220 
+CEL files from  U133AAofAv2. The annotation libraries for the two first
+ones are `hgu133a.db`and `hthgu133a.db`. However, there is no annotation library (e.g. CDF) 
+available for U133AAofAv2. 
+
+```{r affyid_annotations, eval=FALSE}
+library(hgu133a.db)
+myAnnot <- data.frame(ACCNUM=sapply(contents(hgu133aACCNUM), paste, collapse=", "), 
+                             SYMBOL=sapply(contents(hgu133aSYMBOL), paste, collapse=", "), 
+                             UNIGENE=sapply(contents(hgu133aUNIGENE), paste, collapse=", "), 
+                             ENTREZID=sapply(contents(hgu133aENTREZID), paste, collapse=", "), 
+                             ENSEMBL=sapply(contents(hgu133aENSEMBL), paste, collapse=", "), 
+                             DESC=sapply(contents(hgu133aGENENAME), paste, collapse=", "))
+
+PMID26490707 <- read.delim("./data/PMID26490707_S1.xls", comment="#")
+affyid <- row.names(myAnnot[myAnnot$ENTREZID %in% PMID26490707$"NEW.Entrez.ID",])
+degMA <- read.delim("./results/degMA.xls", row.names=1, check.names=FALSE)
+degMA <- degMA[ , !is.na(colSums(degMA))] # Remove columns where DEG analysis was not possible
+degMAsub <- degMA[affyid,]
+c <- colSums(degMAsub==1) # Common in both (c)
+a <- colSums(degMAsub==0) # Only in query (a)
+b <- colSums(degMA==1) - c # Only in cmap (b)
+j <- c/(c+a+b) # Jaccard similarity 
+sort(j, decreasing=TRUE)[1:10]
+```
 
 # Funding
 This project is funded by NIH grant U24AG051129 awarded by the National Intitute of Aging (NIA).
