--- a/vignettes/longevityTools_CMAP.Rmd
+++ b/vignettes/longevityTools_CMAP.Rmd
@@ -197,14 +197,15 @@ write.table(degMA, file="./results/degMA.xls", quote=FALSE, sep="\t", col.names 
 ## Annotation information for Affy chips
 The following generate annotation information for the Affymetirx probe set identifiers.
 
-Note, the three different Affymetrix chip types used by CMAP share most probe set ids (>95%), 
-meaning it is possible to combine the data after normalization. The number of CEL files from 
-each chip type are: 807 CEL files from HG-U133A, 6029 CEL files from HT_HG-U133A, and 220 
-CEL files from  U133AAofAv2. The annotation libraries for the two first
-ones are `hgu133a.db`and `hthgu133a.db`. However, there is no annotation library (e.g. CDF) 
-available for U133AAofAv2. 
+Note, the three different Affymetrix chip types used by CMAP share most probe
+set ids (>95%), meaning it is possible to combine the data after normalization
+and use the same annotation package for all of them. The number of CEL files
+from each chip type are: 807 CEL files from HG-U133A, 6029 CEL files from
+HT_HG-U133A, and 220 CEL files from  U133AAofAv2. The annotation libraries for
+the two first ones are `hgu133a.db`and `hthgu133a.db`. However, there is no
+annotation library (e.g. CDF) available for U133AAofAv2. 
 
-```{r affyid_annotations, eval=FALSE}
+```{r affyid_annotations, eval=TRUE}
 library(hgu133a.db)
 myAnnot <- data.frame(ACCNUM=sapply(contents(hgu133aACCNUM), paste, collapse=", "), 
                              SYMBOL=sapply(contents(hgu133aSYMBOL), paste, collapse=", "), 
@@ -212,7 +213,11 @@ myAnnot <- data.frame(ACCNUM=sapply(contents(hgu133aACCNUM), paste, collapse=", 
                              ENTREZID=sapply(contents(hgu133aENTREZID), paste, collapse=", "), 
                              ENSEMBL=sapply(contents(hgu133aENSEMBL), paste, collapse=", "), 
                              DESC=sapply(contents(hgu133aGENENAME), paste, collapse=", "))
+```
 
+## Identify DEG overlaps with Peters et al [-@Peters2015-fc]
+
+```{r deg_overlaps, eval=TRUE}
 PMID26490707 <- read.delim("./data/PMID26490707_S1.xls", comment="#")
 affyid <- row.names(myAnnot[myAnnot$ENTREZID %in% PMID26490707$"NEW.Entrez.ID",])
 degMA <- read.delim("./results/degMA.xls", row.names=1, check.names=FALSE)
