--- a/vignettes/longevityTools_CMAP.Rmd
+++ b/vignettes/longevityTools_CMAP.Rmd
@@ -205,8 +205,8 @@ HT_HG-U133A, and 220 CEL files from  U133AAofAv2. The annotation libraries for
 the two first ones are `hgu133a.db`and `hthgu133a.db`. However, there is no
 annotation library (e.g. CDF) available for U133AAofAv2. 
 
-```{r affyid_annotations, eval=TRUE}
-suppressMessages(library(hgu133a.db))
+```{r affyid_annotations, eval=TRUE, message=FALSE}
+library(hgu133a.db)
 myAnnot <- data.frame(ACCNUM=sapply(contents(hgu133aACCNUM), paste, collapse=", "), 
                              SYMBOL=sapply(contents(hgu133aSYMBOL), paste, collapse=", "), 
                              UNIGENE=sapply(contents(hgu133aUNIGENE), paste, collapse=", "), 
