--- a/vignettes/longevityTools_CMAP.Rmd
+++ b/vignettes/longevityTools_CMAP.Rmd
@@ -195,6 +195,7 @@ df <- cbind(df1[affyid,], df2[affyid,], df3[affyid,])
 ```{r deg_limma, eval=FALSE}
 degMA <- runLimma(df, comp_list, fdr=0.10, foldchange=1, verbose=TRUE)
 write.table(degMA, file="./results/degMA.xls", quote=FALSE, sep="\t", col.names = NA) 
+saveRDS(degMA, "./results/degMA.rds")
 ```
 
 <div align="right">[Back to Table of Contents]()</div>
@@ -225,7 +226,8 @@ myAnnot <- data.frame(ACCNUM=sapply(contents(hgu133aACCNUM), paste, collapse=", 
 ```{r deg_overlaps, eval=TRUE}
 PMID26490707 <- read.delim("./data/PMID26490707_S1.xls", comment="#")
 affyid <- row.names(myAnnot[myAnnot$ENTREZID %in% PMID26490707$"NEW.Entrez.ID",])
-degMA <- read.delim("./results/degMA.xls", row.names=1, check.names=FALSE)
+# degMA <- read.delim("./results/degMA.xls", row.names=1, check.names=FALSE)
+degMA <- readRDS("./results/degMA.rds") # Faster then read.delim()
 degMA <- degMA[ , !is.na(colSums(degMA))] # Remove columns where DEG analysis was not possible
 degMAsub <- degMA[affyid,]
 c <- colSums(degMAsub==1) # Common in both (c)
